--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["michaeldel <michaeldel@protonmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+requests = "^2.22"
+beautifulsoup4 = "^4.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
