--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["michaeldel <michaeldel@protonmail.com>"]
 python = "^3.7"
 requests = "^2.22"
 beautifulsoup4 = "^4.8"
+lxml = "^4.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
