--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ lxml = "^4.4"
 pytest = "^3.0"
 black = {version = "^18.3-alpha.0", allows-prereleases = true}
 flake8 = "^3.7"
+pytest-datadir = "^1.3"
+responses = "^0.10.6"
 
 [tool.black]
 target-version = ['py37']
