--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ black = {version = "^18.3-alpha.0", allows-prereleases = true}
 flake8 = "^3.7"
 pytest-datadir = "^1.3"
 responses = "^0.10.6"
+mypy = "^0.720.0"
 
 [tool.black]
 target-version = ['py37']
