--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,7 @@ authors = ["michaeldel <michaeldel@protonmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-requests = "^2.22"
-beautifulsoup4 = "^4.8"
-lxml = "^4.4"
+requests-html = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
